# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/src/: index.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login-robot/: interactive_console_output.xml  log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: interactive_console_output.xml  log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: index.py  peli_yliluokka.py  tekoaly_parannettu.py
