[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = "desc desc desc"
license = "MIT"
authors = ["joonarafael <joona.kettunen21@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
jsonpickle = "1.3.0"
cowsay = "^6.1"
toml = "^0.10.2"


[tool.poetry.group.devdependencies.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
